--- a/session_11_data_wrangling_i/DataTypes/zip/loading_zip_file.ipynb
+++ b/session_11_data_wrangling_i/DataTypes/zip/loading_zip_file.ipynb
@@ -2,12 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "# df = pd.read_csv(\"sets.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import zipfile\n",
+    "zip_object = zipfile.ZipFile(\"lego_database.zip\",\"r\")\n",
+    "zip_object.extractall()\n",
+    "zip_object.close()"
    ]
   },
   {
@@ -23,13 +35,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import zipfile\n",
     "with zipfile.ZipFile(\"lego_database.zip\", \"r\") as zip_object:\n",
-    "    zip_object.extract(\"sets.csv\",\"./lego_database\")"
+    "    zip_object.extract(\"sets.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set_num      0\n",
+       "name         0\n",
+       "year         0\n",
+       "theme_id     0\n",
+       "num_parts    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv(\"sets.csv\")\n",
+    "df.isnull().sum()"
    ]
   },
   {
@@ -925,7 +964,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
